--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -46,7 +46,6 @@ html {
 body {
   margin: 0;
   /* Move down content because we have a fixed navbar that is 50px tall */
-  padding-top: 50px;
   padding-bottom: 20px;
 }
 
@@ -1649,6 +1648,7 @@ th {
 .table {
   width: 100%;
   margin-bottom: 20px;
+  border-collapse: collapse;
 }
 
 .table > thead > tr > th,
